# pdf2json

./: .gitignore  APP_API_GUIDE.md  ARCHITECTURE.md  MYSQL_POOL_REFACTORING.md  get_course_list.py  query_specific_pages.py  refactoring_plan.md  requirements.txt  start.sh  test_concurrent.py  test_quote_api.py  test_quote_leak.py  test_vectorizer.py  verify_quotes.py  金山云HR服务台_问答库_20251010.xlsx
app_api/: README.md  __init__.py  api.py  config.py
beisen_course/: README.md  __init__.py  course_service.py
conversation_repository/: README.md  __init__.py  db.py  init_db.py  schema.sql
document_vectorizer/: README.md
file_repository/: README.md  __init__.py  clear_database.py  db.py  repository.py
instruction_repository/: README.md  db.py
km_agent/: README.md  __init__.py  agent.py  conversation_manager.py  tools.py
ks_infrastructure/: README.md  __init__.py  db_session.py  pyproject.toml  setup.py  user_service.py
ks_infrastructure/configs/: __init__.py  default.py
ks_infrastructure/examples/: basic_usage.py
ks_infrastructure/services/: __init__.py  base.py  embedding_service.py  exceptions.py  minio_service.py  mysql_service.py  openai_service.py  qdrant_service.py  user_info_service.py  vision_service.py
ks_infrastructure/tests/: test_all_services.py  test_attendance_service.py  test_subordinate_employee_info.py
pdf2json_module/: README.md  requirements.txt
pdf_to_json/: README.md  __init__.py  converter.py  requirements.txt
pdf_vectorizer/: README.md  vectorizer.py
quote_repository/: db.py
reminder_repository/: IMPLEMENTATION.md  README.md  (+2 more)
(+58 files in other folders)
